[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvidia_profiler"
version = "0.1"
authors = [
	{name="Colin Dietrich", email="repos@wildjuniper.com"},
	{name="Scott C. Lowe", email="scott.code.lowe@gmail.com"}
]
description = "Record CPU and GPU Performance at regular intervals using nvidia-smi"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/crdietrich/nvidia_profiler"
"Bug Tracker" = "https://github.com/crdietrich/nvidia_profiler/issues"
